# life-index

./: .clawhubignore  .flake8  .gitignore  .handoff.md  .pre-commit-config.yaml  AGENTS.md  AGENT_ONBOARDING.md  AGENT_ONBOARDING_WEB.md  CHANGELOG.md  CHARTER.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.en.md  README.md  README.zh-CN.md  SKILL.md  bootstrap-manifest.json  config.example.yaml  conftest.py  install.ps1  install.sh  mkdocs.yml  package.json  pyproject.toml  sample-readme.md  storm-test.txt  tailwind.config.js
.agent-governance/: CI_HARD_CHECKS.md
.archive/web/: __main__.py  app.py  config.py  context_processors.py  runtime.py
.github/: public-surface.allowlist
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/scripts/: check_doc_sync.py  check_l2_no_llm.py  check_public_diff_names.py  check_public_surface_allowlist.py  run_public_core_assertions.py
.github/workflows/: benchmark.yml  ci.yml  nightly.yml  quality.yml  release.yml  tests.yml
.kimi-learnings/: instruction.md  kimi-learnings.md
.kimi-learnings/round-19-phase1c/: exchanges.md
.pytest_tmp/life_index_inproc_harness0/: INDEX.md
.pytest_tmp/life_index_phase2_thresholds0/: INDEX.md
.pytest_tmp/life_index_phase4_e2e0/: INDEX.md
.pytest_tmp/life_index_relation_search_e2e0/: entity_graph.yaml
.pytest_tmp/test_actual_update0/: test.md
.pytest_tmp/test_add_new_field0/: test.md
.pytest_tmp/test_add_to_existing_index0/: 主题_work.md
.pytest_tmp/test_audit_report_actionable_b0/: entity_graph.yaml
.pytest_tmp/test_boundary_89_percent_fails0/: test_fake_rejection_boundary.py
.pytest_tmp/test_cache_faster_than_parsing0/: perf_test.md
.pytest_tmp/test_cache_stale_after_yaml_up0/: entity_graph.yaml
.pytest_tmp/test_cache_stats0/: test.md
.pytest_tmp/test_cached_lookup_by_primary_0/: entity_graph.yaml
.pytest_tmp/test_compare_detects_regressio0/: baseline.json
.pytest_tmp/test_compare_with_llm_metrics0/: baseline.json
.pytest_tmp/test_compute_vector_checksum0/: test_vec.pkl
.pytest_tmp/test_create_new_generic_index0/: custom_index.md
.pytest_tmp/test_create_new_project_index0/: 项目_MyProject.md
.pytest_tmp/test_create_new_tag_index0/: 标签_重要.md
.pytest_tmp/test_create_new_topic_index0/: 主题_learn.md
.pytest_tmp/test_custom_prefixes0/: config.yaml
.pytest_tmp/test_detects_alias_overlap0/: entity_graph.yaml
.pytest_tmp/test_detects_frequent_co_occur0/: entity_graph.yaml
.pytest_tmp/test_detects_orphan_entities0/: entity_graph.yaml
.pytest_tmp/test_detects_similar_names0/: entity_graph.yaml
.pytest_tmp/test_dry_run0/: test.md
.pytest_tmp/test_each_issue_has_required_f0/: entity_graph.yaml
.pytest_tmp/test_edit_append_content0/: test.md
.pytest_tmp/test_edit_append_to_empty_body0/: test.md
.pytest_tmp/test_edit_delete_nonexistent_f0/: test.md
.pytest_tmp/test_edit_field_update_same_va0/: test.md
.pytest_tmp/test_edit_journal_add_related_0/: life-index_2026-03-25_001.md
.pytest_tmp/test_edit_journal_normalizes_l0/: life-index_2026-03-25_001.md
.pytest_tmp/test_edit_journal_remove_relat0/: life-index_2026-03-25_001.md
.pytest_tmp/test_edit_journal_writes_front0/: life-index_2026-03-25_001.md
.pytest_tmp/test_edit_location_with_weathe0/: test.md
.pytest_tmp/test_edit_location_without_wea0/: test.md
.pytest_tmp/test_edit_lock_timeout0/: test.md
.pytest_tmp/test_edit_preserves_structured0/: test.md
.pytest_tmp/test_edit_reloads_current_stat0/: test.md
.pytest_tmp/test_edit_replace_content0/: test.md
.pytest_tmp/test_edit_response_has_all_req0/: journal.md
.pytest_tmp/test_edit_result_matches_golde0/: journal.md
.pytest_tmp/test_edit_vector_index_update_1/: test.md
.pytest_tmp/test_embedding_text_matches_re0/: journal.md
.pytest_tmp/test_enrich_result_existing_fi0/: test.md
.pytest_tmp/test_enrich_result_snippet_tru0/: test.md
.pytest_tmp/test_enrich_result_with_file0/: test.md
.pytest_tmp/test_enrich_result_with_projec0/: test.md
.pytest_tmp/test_eval_baseline_save_and_co0/: baseline.json
.pytest_tmp/test_eval_gate_baseline_compar0/: baseline.json
.pytest_tmp/test_extract_abstract0/: test.md
.pytest_tmp/test_fake_85_percent_pass_rate0/: test_fake_rejection_low.py
.pytest_tmp/test_full_rebuild_56_journals_0/: entity_graph.yaml
.pytest_tmp/test_get_all_cached_metadata_c0/: test.md
.pytest_tmp/test_get_cached_metadata0/: test.md
.pytest_tmp/test_get_cached_metadata_inval0/: test.md
.pytest_tmp/test_get_or_update_metadata0/: test.md
.pytest_tmp/test_get_or_update_metadata_cr0/: test.md
.pytest_tmp/test_no_abstract0/: test.md
.recovery/: 2026-04-19-recovery-tdd-plan.md  full-working-tree-stat.txt  full-working-tree.patch  progress.txt  untracked-files.txt
.strategy/: ROADMAP.md  strategy.md
assets/: GUI_prototype.html
docs/: AGENT.md  AGENT_UPGRADE_ATOM.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CI_HARD_CHECKS.md  COMPATIBILITY.md  ENTITY_GRAPH.md  ENTITY_GRAPH_UX_SURFACE_SPEC.md  EXECUTION_PRIORITIES.md  HANDBOOK.md  INDEX.md  INSTRUCTIONS.md  PRODUCT_BOUNDARY.md  PROJECT_WORKFLOW.md  README.md  REVIEW-2026-03-14.md  RFC_WORKFLOW.md  SCHEDULE.md  UPGRADE.md  V1_RELEASE_PLAYBOOK.md  VERSIONING.md  VERSION_POLICY.md  gen_ref_pages.py  wsl-server-venv.md
references/: ENTITY_MAINTENANCE_PLAYBOOK.md  ERROR_CODES.md  GROUNDED_QUERY_PLAYBOOK.md  WEATHER_FLOW.md
reports/: WP-CLI-SEM-RM-drop-in-tool-semantic.md  WP-CLI-SYNC-SKILL-AUTOCONVERGE-report.md  WP-CLI-UPGRADE-UX.md
scripts/: SEARCH_DIAGNOSTIC_REPORT.md  freeze_baseline.py  measure_jieba_baseline.py  pre-push-gate.sh  release_preflight.py  run_coverage_gate.sh  run_eval_advisory.sh  run_eval_gate.sh  search_diagnostic.py  setup-wsl-server-venv.sh  tier1-gate.sh
src/: input.css
tests/: conftest.py  golden_rejection_queries.yaml  nl_query_diagnosis.md  nl_query_inproc.py  nl_query_smoke.py
tools/: __main__.py  bootstrap-manifest.json  build_index.py  edit_journal.py  generate_abstract.py  query_weather.py  requirements.txt  search_journals.py  write_journal.py
web/: __init__.py  __main__.py  app.py  runtime.py
(+1493 files in other folders)
