# Life Index - Modern Python Project Configuration
# 现代化 Python 项目配置
# 使用方式: pip install -e .[dev]  # 安装开发依赖

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-index"
version = "1.2.0"
description = "Personal life journaling system with dual-dimension indexing"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Life Index Team"}
]
keywords = ["journal", "life-logging", "agent-skill", "markdown", "indexing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.11"
dependencies = [
    # Core dependencies - 核心依赖
    "pyyaml>=6.0",
    "fastembed>=0.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Development dependencies - 开发依赖
dev = [
    # Type checking - 类型检查
    "mypy>=1.7.0",
    "types-PyYAML",
    
    # Testing - 测试
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    
    # Code quality - 代码质量
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    
    # Documentation - 文档（Markdown 直接阅读，无需构建工具）
    # 项目文档位于 docs/ 目录，直接阅读 Markdown 文件即可
    # GitHub 自动渲染：https://github.com/DrDexter6000/life-index/tree/main/docs
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

# All optional dependencies - 所有可选依赖
all = [
    "life-index[dev]",
]

[project.urls]
Homepage = "https://github.com/DrDexter6000/life-index"
Documentation = "https://github.com/DrDexter6000/life-index/tree/main/docs"
Repository = "https://github.com/DrDexter6000/life-index"
Issues = "https://github.com/DrDexter6000/life-index/issues"

[project.scripts]
# Unified CLI entry point - 统一命令行入口
# Usage: life-index <command> [options]
life-index = "tools.__main__:main"

# Legacy entry points (kept for backward compatibility) - 旧入口点（保留向后兼容）
# Deprecated: Use 'life-index write' instead of 'life-index-write'
life-index-write = "tools.write_journal.__main__:main"
life-index-search = "tools.search_journals.__main__:main"
life-index-edit = "tools.edit_journal.__main__:main"
life-index-weather = "tools.query_weather.__main__:main"
life-index-abstract = "tools.generate_abstract.__main__:main"
life-index-index = "tools.build_index.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
exclude = ["tests*", "docs*", "references*"]

# ========== Black - Code Formatter ==========
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ========== isort - Import Sorting ==========
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

# ========== mypy - Type Checking ==========
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

# Module-specific settings - 模块特定设置
[[tool.mypy.overrides]]
module = "fastembed.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

# ========== pytest - Testing ==========
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ========== Coverage - Test Coverage ==========
[tool.coverage.run]
source = ["tools"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "tools/lib/vector_index_simple.py",  # Optional module
    "tools/**/__main__.py",  # CLI entry points (tested via E2E)
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
fail_under = 49

[tool.coverage.html]
directory = "htmlcov"

# ========== mkdocs - Documentation ==========
[tool.mkdocs]
# Configuration in mkdocs.yml
